syntax = "proto3";

package brokrpc.spec.v1;

import "google/protobuf/descriptor.proto";

// Special type for marking methods that doesn't respond to RPC requests. Designed to be used in event driven
// architecture (fire & forget approach).
message Void {}

message ConsumerOptions {
  // If set, consumer will unbind the queue and consume all last messages in the queue.
  optional bool fading = 1;
}

extend google.protobuf.MethodOptions {
  // TODO: acquire field number for a public extension.
  optional ConsumerOptions consumer = 9001;
}
